--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
-.placeholder{
+.holder{
 	display:flex;
-	justify-content: space-between
+	justify-content: space-between;
+	flex-direction: rowrap;
+	
 }
 .box{
-	width:50px;
-	height: 50px;
+	min-width:500px;
+	height: 200px;
 }
 .box1{
 	background: green;
